RESOLVED FIXED42358
Hyphenation tests crash the Web process
https://bugs.webkit.org/show_bug.cgi?id=42358
Summary Hyphenation tests crash the Web process
Maciej Stachowiak
Reported 2010-07-15 04:00:20 PDT
The following hyphenation tests will crash the Web process, in either WebKit2 or Safari: fast/text/hyphenate-character.html fast/text/hyphens.html
Attachments
The crash report (31.20 KB, text/plain)
2010-07-15 04:07 PDT, Maciej Stachowiak
no flags
Patch (1.20 KB, patch)
2010-07-15 15:21 PDT, Sam Weinig
andersca: review+
Maciej Stachowiak
Comment 1 2010-07-15 04:07:50 PDT
Created attachment 61637 [details] The crash report
Maciej Stachowiak
Comment 2 2010-07-15 04:10:45 PDT
Sam Weinig
Comment 3 2010-07-15 15:21:33 PDT
Sam Weinig
Comment 4 2010-07-15 15:23:52 PDT
Note You need to log in before you can comment on or make changes to this bug.