Fix for https://bugs.webkit.org/show_bug.cgi?id=42358 <rdar://problem/8194512> Hyphenation tests crash the Web process

Reviewed by Anders Carlsson.

* WebProcess/WebCoreSupport/mac/WebSystemInterface.mm:
(InitWebCoreSystemInterface): Add missing initializer.



Canonical link: https://commits.webkit.org/54320@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63474 268f45cc-cd09-0410-ab3c-d52691b4dbfc