WebKit2/WebProcess/WebCoreSupport/mac/WebSystemInterface.mm
@@ -109,5 +109,9 @@ void InitWebCoreSystemInterface(void)
     INIT(NoteOpenPanelFiles);
 #endif
 
+#if defined(BUILDING_ON_TIGER) || defined(BUILDING_ON_LEOPARD) || defined(BUILDING_ON_SNOW_LEOPARD)
+    INIT(GetHyphenationLocationBeforeIndex);
+#endif
+
     didInit = true;
 }
